// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pi-executor parity (EXEC-SPLIT-01) > behavior matrix — representative inputs > createBeforeToolCallGuard allows execution when all checks pass 1`] = `
"{
  "isUndefined": true,
  "typeof": "undefined"
}"
`;

exports[`pi-executor parity (EXEC-SPLIT-01) > behavior matrix — representative inputs > createBeforeToolCallGuard blocks when budgetGuard.checkBudget(0) is err 1`] = `
"{
  "block": true,
  "reason": "Token budget exhausted"
}"
`;

exports[`pi-executor parity (EXEC-SPLIT-01) > behavior matrix — representative inputs > createBeforeToolCallGuard blocks when circuitBreaker.isOpen() is true 1`] = `
"{
  "block": true,
  "reason": "Provider circuit breaker open"
}"
`;

exports[`pi-executor parity (EXEC-SPLIT-01) > behavior matrix — representative inputs > createBeforeToolCallGuard blocks when stepCounter.shouldHalt() is true 1`] = `
"{
  "block": true,
  "reason": "Step limit reached -- blocking tool execution"
}"
`;

exports[`pi-executor parity (EXEC-SPLIT-01) > behavior matrix — representative inputs > mergeSessionStats additively merges two SessionStats records 1`] = `
"{
  "tokensUsed": {
    "cacheRead": 1000,
    "cacheWrite": 500,
    "input": 200,
    "output": 80,
    "total": 280
  }
}"
`;

exports[`pi-executor parity (EXEC-SPLIT-01) > behavior matrix — representative inputs > mergeSessionStats handles getSessionStats throwing (non-fatal fallback) 1`] = `
"{
  "tokensUsed": {
    "cacheRead": 7,
    "cacheWrite": 8,
    "input": 100,
    "output": 50,
    "total": 150
  }
}"
`;

exports[`pi-executor parity (EXEC-SPLIT-01) > behavior matrix — representative inputs > mergeSessionStats is a no-op when getSessionStats is undefined 1`] = `
"{
  "tokensUsed": {
    "cacheRead": 10,
    "cacheWrite": 20,
    "input": 100,
    "output": 50,
    "total": 150
  }
}"
`;

exports[`pi-executor parity (EXEC-SPLIT-01) > behavior matrix — representative inputs > mergeSessionStats preserves bridge cacheRead/cacheWrite when stats are partial 1`] = `
"{
  "tokensUsed": {
    "cacheRead": 999,
    "cacheWrite": 888,
    "input": 200,
    "output": 80,
    "total": 280
  }
}"
`;

exports[`pi-executor parity (EXEC-SPLIT-01) > public API surface > PiExecutorDeps — type-level key witness (required-only proxy) 1`] = `
"[
  "agentDir",
  "authStorage",
  "budgetGuard",
  "circuitBreaker",
  "costTracker",
  "customTools",
  "eventBus",
  "logger",
  "modelRegistry",
  "sessionAdapter",
  "stepCounter",
  "workspaceDir"
]"
`;

exports[`pi-executor parity (EXEC-SPLIT-01) > public API surface > createBeforeToolCallGuard / mergeSessionStats — typeof witness 1`] = `
"{
  "createBeforeToolCallGuard": "function",
  "mergeSessionStats": "function"
}"
`;

exports[`pi-executor parity (EXEC-SPLIT-01) > public API surface > exports the expected named symbols 1`] = `
"[
  "createBeforeToolCallGuard",
  "mergeSessionStats"
]"
`;
